k8s-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: fxai-fl-app
spec:
  ports:
  - port: 3000
    name: http
    #type: LoadBalancer
  type: NodePort 
  selector:
    app: fxai-fl-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fxai-fl-app-deployment 
spec:
  selector:
    matchLabels:
      app: fxai-fl-app 
  template:
    metadata:
      labels:
        app: fxai-fl-app 
    spec:
      containers:
      - name: fxai-fl-app 
        image: improf/fxai-fl-components 
        ports:
          - containerPort: 3000
