k8s-ingress-minio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-minio
  namespace: kubeflow
  annotations:
          kubernetes.io/ingress.class: nginx
          kubernetes.io/tls-acme: "true"
          #nginx.ingress.kubernetes.io/rewrite-target: /$2
          nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
          #- host: fxai-fl-app.impro.pe.kr
  - host: minio.impro.pe.kr
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
                    number: 9000 
  tls:
  - hosts:
    - minio.impro.pe.kr
    secretName: fxai-fl-app-tls

#http://waspro.tistory.com/579
#http://box0830.tistory.com/311
